# NARIS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: bnr.yml
include/: DirectXHolder.cpp  DirectXHolder.h  GUI.cpp  GUI.h
include/ImGui/: imgui.h
include/ImGui/backends/: imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_win32.cpp  imgui_impl_win32.h
src/: DirectXHolder.cpp  Features.cpp  Features.h  GUI.cpp  GUI.h  Globals.cpp  Globals.h  Server.cpp  Utility.cpp  Utility.h  main.cpp  src.sln  src.vcxproj
src/Features/: Clients.cpp  Clients.h
